--- a/notebooks/2015-05-22 Basic calibration.ipynb
+++ b/notebooks/2015-05-22 Basic calibration.ipynb
@@ -9,7 +9,7 @@
    "outputs": [],
    "source": [
     "import glob\n",
-    "folders = glob.glob('/data/opus/N*')"
+    "folders = glob.glob('/Users/klay6683/data/ciss/opus/N*')"
    ]
   },
   {
@@ -32,6 +32,75 @@
    ],
    "source": [
     "len(folders)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def process_folder(folder):\n",
+    "    import glob\n",
+    "    from pysis.exceptions import ProcessError\n",
+    "    from pyciss import pipeline as p\n",
+    "    done = glob.glob(folder+'/*.map.cal.cub')\n",
+    "    if done:\n",
+    "        return folder,True\n",
+    "    img_name = glob.glob(folder+'/*.LBL')\n",
+    "    try:\n",
+    "        map_name = p.calibrate_ciss(img_name[0])\n",
+    "    except ProcessError:\n",
+    "        return folder,False\n",
+    "    return folder,True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from IPython.parallel import Client\n",
+    "c = Client()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "lbview = c.load_balanced_view()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "results = lbview.map_async(process_folder, folders)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for result in results:\n",
+    "    print(result)"
    ]
   },
   {
