--- a/notebooks/2015-05-22 Basic calibration.ipynb
+++ b/notebooks/2015-05-22 Basic calibration.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import glob\n",
-    "folders = glob.glob('/Users/klay6683/data/ciss/opus/N*')"
+    "folders = glob.glob('/Volumes/Data/ciss/opus/N*')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -25,7 +25,7 @@
        "490"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -46,15 +46,59 @@
     "    import glob\n",
     "    from pysis.exceptions import ProcessError\n",
     "    from pyciss import pipeline as p\n",
-    "    done = glob.glob(folder+'/*.map.cal.cub')\n",
-    "    if done:\n",
-    "        return folder,True\n",
+    "#     done = glob.glob(folder+'/*.map.cal.cub')\n",
+    "#     if done:\n",
+    "#         return folder,True\n",
     "    img_name = glob.glob(folder+'/*.LBL')\n",
     "    try:\n",
     "        map_name = p.calibrate_ciss(img_name[0])\n",
     "    except ProcessError:\n",
     "        return folder,False\n",
     "    return folder,True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('/Volumes/Data/ciss/opus/N1467345444', True)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "process_folder(folders[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from pyciss import pipeline as p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "p.calibrate_ciss??"
    ]
   },
   {
