--- a/notebooks/2015-05-22 Basic calibration.ipynb
+++ b/notebooks/2015-05-22 Basic calibration.ipynb
@@ -9,7 +9,7 @@
    "outputs": [],
    "source": [
     "import glob\n",
-    "folders = glob.glob('/Volumes/Data/ciss/opus/N*')"
+    "folders = glob.glob('/cassini_ringsdata/opus/N*')"
    ]
   },
   {
@@ -59,7 +59,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "folders = pd.Series(folders)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "SOI = folders[folders.str.contains('N146734')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -67,21 +89,21 @@
     {
      "data": {
       "text/plain": [
-       "('/Volumes/Data/ciss/opus/N1467345444', True)"
+       "('/cassini_ringsdata/opus/N1467346506/', True)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "process_folder(folders[0])"
+    "process_folder('/cassini_ringsdata/opus/N1467346506/')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -93,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -104,36 +126,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "results = lbview.map_async(process_folder, folders)"
+    "results = lbview.map_async(process_folder, SOI)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "from iuvs.multitools import *"
+    "from IPython.html.widgets import IntProgress\n",
+    "from IPython.display import display"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "from time import sleep\n",
-    "prog = IntProgress(min=0, max=len(folders))\n",
+    "prog = IntProgress(min=0, max=len(SOI))\n",
     "display(prog)\n",
     "while not results.ready():\n",
     "    prog.value = results.progress\n",
