--- a/notebooks/2015-05-22 Basic calibration.ipynb
+++ b/notebooks/2015-05-22 Basic calibration.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -70,18 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "SOI = folders[folders.str.contains('N146734')]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -89,21 +78,47 @@
     {
      "data": {
       "text/plain": [
-       "('/cassini_ringsdata/opus/N1467346506/', True)"
+       "27     /cassini_ringsdata/opus/N1467347445\n",
+       "44     /cassini_ringsdata/opus/N1467347249\n",
+       "46     /cassini_ringsdata/opus/N1467345857\n",
+       "115    /cassini_ringsdata/opus/N1467345621\n",
+       "129    /cassini_ringsdata/opus/N1467345680\n",
+       "135    /cassini_ringsdata/opus/N1467345916\n",
+       "147    /cassini_ringsdata/opus/N1467346329\n",
+       "156    /cassini_ringsdata/opus/N1467345503\n",
+       "165    /cassini_ringsdata/opus/N1467346388\n",
+       "166    /cassini_ringsdata/opus/N1467347504\n",
+       "180    /cassini_ringsdata/opus/N1467346211\n",
+       "230    /cassini_ringsdata/opus/N1467345975\n",
+       "234    /cassini_ringsdata/opus/N1467346034\n",
+       "242    /cassini_ringsdata/opus/N1467345562\n",
+       "294    /cassini_ringsdata/opus/N1467346565\n",
+       "300    /cassini_ringsdata/opus/N1467345444\n",
+       "315    /cassini_ringsdata/opus/N1467346152\n",
+       "335    /cassini_ringsdata/opus/N1467346624\n",
+       "354    /cassini_ringsdata/opus/N1467346506\n",
+       "360    /cassini_ringsdata/opus/N1467346270\n",
+       "394    /cassini_ringsdata/opus/N1467347210\n",
+       "404    /cassini_ringsdata/opus/N1467345798\n",
+       "418    /cassini_ringsdata/opus/N1467345739\n",
+       "473    /cassini_ringsdata/opus/N1467346093\n",
+       "475    /cassini_ringsdata/opus/N1467346447\n",
+       "dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "process_folder('/cassini_ringsdata/opus/N1467346506/')"
+    "SOI = folders[folders.str.contains('N146734')]\n",
+    "SOI"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -115,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -126,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -137,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -149,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
