--- a/notebooks/2015-04-03 Downloading ring images.ipynb
+++ b/notebooks/2015-04-03 Downloading ring images.ipynb
@@ -5,7 +5,7 @@
    "execution_count": 4,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1317,13 +1317,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "opus = opusapi.OPUS()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 100 obsids.\n"
+     ]
+    }
+   ],
+   "source": [
+    "opus.get_between_resolutions(0.5, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'http://pds-rings-tools.seti.org/opus/api/files.json?projectedradialresolution1=0.5&target=S+RINGS&instrumentid=Cassini+ISS&projectedradialresolution2=1'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "opus.r.url"
    ]
   },
   {
