Add many new notebooks and their python version

--- a/notebooks/2015-04-03 Downloading ring images.ipynb
+++ b/notebooks/2015-04-03 Downloading ring images.ipynb
@@ -1317,13 +1317,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "from pyciss import opusapi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "opus = opusapi.OPUS()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 1 obsids.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[Raw:\n",
+       " Label:\n",
+       " http://pds-rings.seti.org/volumes/COISS_2xxx/COISS_2004/data/1466584989_1467427246/N1467345444_2.LBL\n",
+       " Image:\n",
+       " http://pds-rings.seti.org/volumes/COISS_2xxx/COISS_2004/data/1466584989_1467427246/N1467345444_2.IMG\n",
+       " Calibrated:\n",
+       " Label:\n",
+       " http://pds-rings.seti.org/derived/COISS_2xxx/COISS_2004/data/1466584989_1467427246/N1467345444_2_CALIB.LBL\n",
+       " Image:\n",
+       " http://pds-rings.seti.org/derived/COISS_2xxx/COISS_2004/data/1466584989_1467427246/N1467345444_2_CALIB.IMG]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "opus.get_filename('N1467345444_2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading N1467345444_2.IMG\n",
+      "Downloading N1467345444_2.LBL\n"
+     ]
+    }
+   ],
+   "source": [
+    "opus.download_results()"
    ]
   },
   {
@@ -1429,9 +1498,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
