--- a/notebooks/2015-05-22 Basic calibration.ipynb
+++ b/notebooks/2015-05-22 Basic calibration.ipynb
@@ -8,8 +8,9 @@
    },
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "import glob\n",
-    "folders = glob.glob('/cassini_ringsdata/opus/N*')"
+    "folders = glob.glob('/Volumes/Data/ciss/opus/N*')"
    ]
   },
   {
@@ -61,7 +62,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -78,35 +79,35 @@
     {
      "data": {
       "text/plain": [
-       "27     /cassini_ringsdata/opus/N1467347445\n",
-       "44     /cassini_ringsdata/opus/N1467347249\n",
-       "46     /cassini_ringsdata/opus/N1467345857\n",
-       "115    /cassini_ringsdata/opus/N1467345621\n",
-       "129    /cassini_ringsdata/opus/N1467345680\n",
-       "135    /cassini_ringsdata/opus/N1467345916\n",
-       "147    /cassini_ringsdata/opus/N1467346329\n",
-       "156    /cassini_ringsdata/opus/N1467345503\n",
-       "165    /cassini_ringsdata/opus/N1467346388\n",
-       "166    /cassini_ringsdata/opus/N1467347504\n",
-       "180    /cassini_ringsdata/opus/N1467346211\n",
-       "230    /cassini_ringsdata/opus/N1467345975\n",
-       "234    /cassini_ringsdata/opus/N1467346034\n",
-       "242    /cassini_ringsdata/opus/N1467345562\n",
-       "294    /cassini_ringsdata/opus/N1467346565\n",
-       "300    /cassini_ringsdata/opus/N1467345444\n",
-       "315    /cassini_ringsdata/opus/N1467346152\n",
-       "335    /cassini_ringsdata/opus/N1467346624\n",
-       "354    /cassini_ringsdata/opus/N1467346506\n",
-       "360    /cassini_ringsdata/opus/N1467346270\n",
-       "394    /cassini_ringsdata/opus/N1467347210\n",
-       "404    /cassini_ringsdata/opus/N1467345798\n",
-       "418    /cassini_ringsdata/opus/N1467345739\n",
-       "473    /cassini_ringsdata/opus/N1467346093\n",
-       "475    /cassini_ringsdata/opus/N1467346447\n",
+       "0     /Volumes/Data/ciss/opus/N1467345444\n",
+       "1     /Volumes/Data/ciss/opus/N1467345503\n",
+       "2     /Volumes/Data/ciss/opus/N1467345562\n",
+       "3     /Volumes/Data/ciss/opus/N1467345621\n",
+       "4     /Volumes/Data/ciss/opus/N1467345680\n",
+       "5     /Volumes/Data/ciss/opus/N1467345739\n",
+       "6     /Volumes/Data/ciss/opus/N1467345798\n",
+       "7     /Volumes/Data/ciss/opus/N1467345857\n",
+       "8     /Volumes/Data/ciss/opus/N1467345916\n",
+       "9     /Volumes/Data/ciss/opus/N1467345975\n",
+       "10    /Volumes/Data/ciss/opus/N1467346034\n",
+       "11    /Volumes/Data/ciss/opus/N1467346093\n",
+       "12    /Volumes/Data/ciss/opus/N1467346152\n",
+       "13    /Volumes/Data/ciss/opus/N1467346211\n",
+       "14    /Volumes/Data/ciss/opus/N1467346270\n",
+       "15    /Volumes/Data/ciss/opus/N1467346329\n",
+       "16    /Volumes/Data/ciss/opus/N1467346388\n",
+       "17    /Volumes/Data/ciss/opus/N1467346447\n",
+       "18    /Volumes/Data/ciss/opus/N1467346506\n",
+       "19    /Volumes/Data/ciss/opus/N1467346565\n",
+       "20    /Volumes/Data/ciss/opus/N1467346624\n",
+       "21    /Volumes/Data/ciss/opus/N1467347210\n",
+       "22    /Volumes/Data/ciss/opus/N1467347249\n",
+       "23    /Volumes/Data/ciss/opus/N1467347445\n",
+       "24    /Volumes/Data/ciss/opus/N1467347504\n",
        "dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,9 +119,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -130,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -141,22 +142,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "results = lbview.map_async(process_folder, SOI)"
+    "results = lbview.map_async(process_folder, SOI[:2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ":0: FutureWarning: IPython widgets are experimental and may change in the future.\n"
+     ]
+    }
+   ],
    "source": [
     "from IPython.html.widgets import IntProgress\n",
     "from IPython.display import display"
@@ -164,14 +173,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "from time import sleep\n",
-    "prog = IntProgress(min=0, max=len(SOI))\n",
+    "prog = IntProgress(min=0, max=len(SOI)+1)\n",
     "display(prog)\n",
     "while not results.ready():\n",
     "    prog.value = results.progress\n",
@@ -204,9 +213,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
