--- a/notebooks/2015-05-22 Post calibration processing.ipynb
+++ b/notebooks/2015-05-22 Post calibration processing.ipynb
@@ -15,12 +15,69 @@
    },
    "outputs": [],
    "source": [
-    "import glob"
+    "from pathlib import Path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "root = Path('/Users/klay6683/Dropbox/data/ciss/SOI')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[PosixPath('/Users/klay6683/Dropbox/data/ciss/SOI/N1467345444_2.map.dst.cal.cub'),\n",
+       " PosixPath('/Users/klay6683/Dropbox/data/ciss/SOI/N1467345503_2.map.dst.cal.cub'),\n",
+       " PosixPath('/Users/klay6683/Dropbox/data/ciss/SOI/N1467345562_3.map.dst.cal.cub'),\n",
+       " PosixPath('/Users/klay6683/Dropbox/data/ciss/SOI/N1467345621_2.map.dst.cal.cub'),\n",
+       " PosixPath('/Users/klay6683/Dropbox/data/ciss/SOI/N1467345680_2.map.dst.cal.cub'),\n",
+       " PosixPath('/Users/klay6683/Dropbox/data/ciss/SOI/N1467345739_2.map.dst.cal.cub'),\n",
+       " PosixPath('/Users/klay6683/Dropbox/data/ciss/SOI/N1467345798_2.map.dst.cal.cub'),\n",
+       " PosixPath('/Users/klay6683/Dropbox/data/ciss/SOI/N1467345857_2.map.dst.cal.cub'),\n",
+       " PosixPath('/Users/klay6683/Dropbox/data/ciss/SOI/N1467345916_2.map.dst.cal.cub'),\n",
+       " PosixPath('/Users/klay6683/Dropbox/data/ciss/SOI/N1467345975_2.map.dst.cal.cub'),\n",
+       " PosixPath('/Users/klay6683/Dropbox/data/ciss/SOI/N1467346034_2.map.dst.cal.cub'),\n",
+       " PosixPath('/Users/klay6683/Dropbox/data/ciss/SOI/N1467346093_2.map.dst.cal.cub'),\n",
+       " PosixPath('/Users/klay6683/Dropbox/data/ciss/SOI/N1467346152_2.map.dst.cal.cub'),\n",
+       " PosixPath('/Users/klay6683/Dropbox/data/ciss/SOI/N1467346211_2.map.dst.cal.cub'),\n",
+       " PosixPath('/Users/klay6683/Dropbox/data/ciss/SOI/N1467346270_2.map.dst.cal.cub'),\n",
+       " PosixPath('/Users/klay6683/Dropbox/data/ciss/SOI/N1467346329_2.map.dst.cal.cub'),\n",
+       " PosixPath('/Users/klay6683/Dropbox/data/ciss/SOI/N1467346388_2.map.dst.cal.cub'),\n",
+       " PosixPath('/Users/klay6683/Dropbox/data/ciss/SOI/N1467346447_2.map.dst.cal.cub'),\n",
+       " PosixPath('/Users/klay6683/Dropbox/data/ciss/SOI/N1467346506_2.map.dst.cal.cub'),\n",
+       " PosixPath('/Users/klay6683/Dropbox/data/ciss/SOI/N1467346565_2.map.dst.cal.cub'),\n",
+       " PosixPath('/Users/klay6683/Dropbox/data/ciss/SOI/N1467346624_2.map.dst.cal.cub'),\n",
+       " PosixPath('/Users/klay6683/Dropbox/data/ciss/SOI/N1467347210_2.map.dst.cal.cub'),\n",
+       " PosixPath('/Users/klay6683/Dropbox/data/ciss/SOI/N1467347249_2.map.dst.cal.cub'),\n",
+       " PosixPath('/Users/klay6683/Dropbox/data/ciss/SOI/N1467347445_2.map.dst.cal.cub'),\n",
+       " PosixPath('/Users/klay6683/Dropbox/data/ciss/SOI/N1467347504_2.map.dst.cal.cub')]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(root.glob('*.cub'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -31,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -47,7 +104,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +116,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "481"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fnames.size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -70,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -81,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -89,7 +168,7 @@
     {
      "data": {
       "text/html": [
-       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+       "<div>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -131,7 +210,7 @@
        "4  /cassini_ringsdata/opus/N1541714976/N154171497..."
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -154,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -162,7 +241,7 @@
     {
      "data": {
       "text/html": [
-       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+       "<div>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -210,7 +289,7 @@
        "4  /cassini_ringsdata/opus/N1541714976/N154171497...  N1541714976"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -232,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -240,7 +319,7 @@
     {
      "data": {
       "text/html": [
-       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+       "<div>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -287,7 +366,7 @@
        "N1541714976  /cassini_ringsdata/opus/N1541714976/N154171497..."
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -316,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -324,7 +403,7 @@
     {
      "data": {
       "text/html": [
-       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+       "<div>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -346,8 +425,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>top</th>\n",
-       "      <td>/cassini_ringsdata/opus/N1541717407/N154171740...</td>\n",
-       "      <td>/cassini_ringsdata/opus/N1640504692/N164050469...</td>\n",
+       "      <td>/cassini_ringsdata/opus/N1595337363/N159533736...</td>\n",
+       "      <td>/cassini_ringsdata/opus/N1503229927/N150322992...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>freq</th>\n",
@@ -362,17 +441,17 @@
        "                                                 filtered  \\\n",
        "count                                                 481   \n",
        "unique                                                481   \n",
-       "top     /cassini_ringsdata/opus/N1541717407/N154171740...   \n",
+       "top     /cassini_ringsdata/opus/N1595337363/N159533736...   \n",
        "freq                                                    1   \n",
        "\n",
        "                                               unfiltered  \n",
        "count                                                 406  \n",
        "unique                                                406  \n",
-       "top     /cassini_ringsdata/opus/N1640504692/N164050469...  \n",
+       "top     /cassini_ringsdata/opus/N1503229927/N150322992...  \n",
        "freq                                                    1  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -394,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -402,7 +481,7 @@
     {
      "data": {
       "text/html": [
-       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+       "<div>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -604,7 +683,7 @@
        "N1467346447  /cassini_ringsdata/opus/N1467346447/N146734644...  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -921,9 +1000,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
