add several new notebooks and new meta module
 * new meta module reads Miodrag's metadata table up to 2500 m resolution files
   This also adds the table file to the package data in the setup module.
 * new notebooks for data management, io development and SOI recalibration
 * deleted older sublime text project file,leaving local and VM versions only

--- a/notebooks/2016-01-05 Pasadena team meeting.ipynb
+++ b/notebooks/2016-01-05 Pasadena team meeting.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "from pathlib import Path\n",
     "import warnings\n",
-    "from pyciss import io\n",
+    "from pyciss import io, pipeline\n",
     "import seaborn as sns\n",
     "from sklearn.preprocessing import scale\n",
     "sns.set_style('white')\n",
@@ -26,46 +26,19 @@
    },
    "outputs": [],
    "source": [
-    "root = Path('/Users/klay6683/Dropbox/data/ciss/SOI')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "fpaths = list(root.glob('*2.map.dst.cal.cub'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "def remove_mean_value(data, axis=1):\n",
-    "    with warnings.catch_warnings():\n",
-    "        warnings.simplefilter(\"ignore\", category=RuntimeWarning)\n",
-    "        mean_value = np.nanmean(data, axis=axis)\n",
-    "    subtracted = data - mean_value[:, np.newaxis]\n",
-    "    return subtracted"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "savedir = fpaths[0].parent / 'std_overlays'\n",
+    "savedir = io.dbpath.parent / 'std_overlays'\n",
     "savedir.mkdir(exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "savedir"
    ]
   },
   {
@@ -78,18 +51,6 @@
    "source": [
     "%matplotlib nbagg\n",
     "sns.set_style('white')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "for i,fpath in enumerate(fpaths):\n",
-    "    print(i, fpath.name)"
    ]
   },
   {
@@ -113,17 +74,39 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cubes = io.db_mapped_cubes()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "cube = io.RingCube(next(cubes))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": false,
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "for fpath in fpaths[13:14]:\n",
-    "    cube = io.RingCube(str(fpath))\n",
+    "def process_cube(fpath):\n",
+    "    cube = io.RingCube(fpath)\n",
     "    img = cube.data[0]\n",
     "    low, high = np.percentile(img[img>0], (2,98))\n",
     "    img[img<0] = np.nan\n",
-    "    sub = remove_mean_value(img)\n",
+    "    sub = pipeline.remove_mean_value(img)\n",
     "    sublow, subhigh = np.percentile(sub[~np.isnan(sub)], (2,98))\n",
     "    fig, ax = plt.subplots(ncols=2, figsize=(10, 6), sharey=False)\n",
     "#     ax = ax.ravel()\n",
@@ -168,7 +151,357 @@
    },
    "outputs": [],
    "source": [
+    "process_cube(Path(cube.filename))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from pyciss.meta import meta1500m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "meta1500m.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "meta1500m[meta1500m.id=='N1591682340'].lit_status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "io.PathManager(cube.filename).cubepath.exists()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "p = next(io.db_label_paths())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "cubepath = io.PathManager('N1503229567').cubepath\n",
+    "\n",
+    "process_cube(cubepath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "cubepath = io.PathManager('N1467346565').cubepath\n",
+    "process_cube(cubepath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "cube = io.RingCube(cubepath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(12,10))\n",
+    "plt.imshow(np.log(np.abs(np.fft.fftshift(np.fft.fft2(img)))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "img = cube.data[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "img[img<0]=0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(12,10))\n",
+    "plt.imshow(img, vmax=0.1, cmap='gray')\n",
+    "plt.colorbar()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "subimg = img[750:1200, 200:1350]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "plt.imshow(subimg, vmax=0.1, cmap='gray')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(12,10))\n",
+    "plt.imshow(np.log(np.abs(np.fft.fftshift(np.fft.fft2(subimg)))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from skimage.feature import hog\n",
+    "from skimage import exposure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "fd, hog_image = hog(subimg, orientations=8, pixels_per_cell=(16, 16),\n",
+    "                    cells_per_block=(1, 1), visualise=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(12, 6), sharex=True, sharey=True)\n",
+    "\n",
+    "ax1.axis('off')\n",
+    "ax1.imshow(subimg, cmap=plt.cm.gray)\n",
+    "ax1.set_title('Input image')\n",
+    "ax1.set_adjustable('box-forced')\n",
+    "\n",
+    "# Rescale histogram for better display\n",
+    "hog_image_rescaled = exposure.rescale_intensity(hog_image, in_range=(0, 0.02))\n",
+    "\n",
+    "ax2.axis('off')\n",
+    "ax2.imshow(hog_image_rescaled, cmap=plt.cm.gray)\n",
+    "ax2.set_title('Histogram of Oriented Gradients')\n",
+    "ax1.set_adjustable('box-forced')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "cubepath = io.PathManager('N1467346447').cubepath\n",
+    "\n",
+    "process_cube(cubepath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cube = io.RingCube(cubepath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "cube.imshow(set_extent=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "cubepath = io.PathManager('/Volumes/Data/ciss/std_overlays/N1467345562_3.cal.dst.map.png').cubepath\n",
+    "\n",
+    "process_cube(cubepath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "cubepath = io.PathManager('/Volumes/Data/ciss/std_overlays/N1467345680_2.cal.dst.map.png').cubepath\n",
+    "\n",
+    "process_cube(cubepath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cube = io.RingCube(cubepath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "cube.imshow(set_extent=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "subimg = cube.img[1380:1465, 500:1800]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "cube.imshow(data=subimg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(12,10))\n",
+    "plt.imshow(np.log(np.abs(np.fft.fftshift(np.fft.fft2(subimg)))))"
    ]
   },
   {
@@ -399,9 +732,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
