fixing metadata package data and reader

--- a/notebooks/io development.ipynb
+++ b/notebooks/io development.ipynb
@@ -30,6 +30,28 @@
    },
    "outputs": [],
    "source": [
+    "from pyciss.meta import meta_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "meta_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "cube = RingCube(pm.cal_cub)"
    ]
   },
