Add ring resonances data file

--- a/notebooks/io development.ipynb
+++ b/notebooks/io development.ipynb
@@ -23,6 +23,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# meta development"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pkg_resources as pr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "with pr.resource_stream('pyciss', 'data/ring_resonances.csv') as f:\n",
+    "    resonances = pd.read_csv(f)\n",
+    "resonances.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "resonances.sort_values(by='Resonance (km)',ascending=False)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
